[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
futures = "0.3"
